[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "geopy>=2.4.1",
    "numpy>=2.3.4",
    "oauthlib>=3.3.1",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
